# ReLe

./: index.html  params.json
rele/: CMakeCache.txt  Makefile  cmake_install.cmake
rele/doc/: Makefile  cmake_install.cmake
rele/include/rele/environments/: ContinuousSwingPendulum.h  Forex.h  ForexContinuous.h  SwingPendulum.h
rele/src/algorithms/step_rules/: StateActionLearningRate.cpp
rele/src/algorithms/td/: GQ-Learning.cpp  WQ-Learning.cpp  WQ-Learning_WP.cpp
rele/src/environments/: ContinuousSwingPendulum.cpp  Forex.cpp  ForexContinuous.cpp  SwingPendulum.cpp
rele/src/policy/q_policy/: Decreasing_e_Greedy.cpp  GP_Policy.cpp  e_GreedyMultipleRegressors.cpp
rele/test/: CMakeLists.txt  Makefile  cmake_install.cmake
rele/test/BBO/: Makefile  cmake_install.cmake
rele/test/Batch/: CMakeLists.txt  CMakeLists.txt~  ContinuousSwingUpTest.cpp  GP-ContinuousFQIPolicyTest.cpp  GP-FQIPolicyTest.cpp  Makefile  PendulumTest.cpp  cmake_install.cmake
rele/test/IRL/: Makefile  cmake_install.cmake
rele/test/IRL/GIRL/: GIRL_LQR.cpp  MGIRL_LQR.cpp
rele/test/MultiHeat/: Makefile  cmake_install.cmake
rele/test/PG/: Makefile  cmake_install.cmake
rele/test/Rocky/: Makefile  cmake_install.cmake
rele/test/TD/: CMakeLists.txt  ForexTest.cpp  Makefile  SwingPendulumTest.cpp  cmake_install.cmake
rele/test/core/: Makefile  cmake_install.cmake
rele/test/feature_selection/: Makefile  cmake_install.cmake
rele/test/miscellaneous/: Makefile  cmake_install.cmake
rele/test/policy/: Makefile  cmake_install.cmake
rele/test/solvers/: Makefile  cmake_install.cmake
(+18 files in other folders)
